给mini_frame添加路由

--- a/04_mini_frame_route/templates/index.html
+++ b/04_mini_frame_route/templates/index.html
@@ -6,6 +6,10 @@
     <link rel="stylesheet" href="/css/index.css">
 </head>
 <body>
-<div id="index">index页面</div>
+<div id="index">我是index.html</div>
+<ul>
+    <li><a href="/center.py">center页面</a></li>
+    <li><a href="/index.py">index页面</a></li>
+</ul>
 </body>
 </html>
